overflow fixed

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,6 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     background-color:#2A2C2F;
     color: white;
-    width: 100%;
     max-width: 1280px;
     min-width: 320px;
     margin: 0 auto;
@@ -11,4 +10,5 @@
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
+    overflow-x: hidden;
 }
